# EcoSortFinal

./: .gitignore  README.md
backend/: requirements.txt  uvi_err.txt  uvi_out.txt
backend/app/: __init__.py  main.py  schemas.py  semantic_rules.py  service.py  settings.py
data/metadata/: class_catalog.json
docs/: architecture.md  dataset_expansion.md  supported_objects.md  training_workflow.md
docs/pitch/: shark_tank_pitch.md  slides_outline.md
docs/report/: ecosort_ieee.aux  ecosort_ieee.fdb_latexmk  ecosort_ieee.fls  ecosort_ieee.tex
ml/: pyproject.toml  requirements-keras.txt  requirements.txt
ml/src/ecosort/: __init__.py  catalog.py  config.py  dataset.py  evaluate.py  export_onnx.py  inference.py  keras_inference.py  keras_train.py  model.py  predict.py  prepare_data.py  rules.py  text_features.py  train.py
mobile/: App.tsx  app.json  package-lock.json  package.json
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/src/api/: client.ts
mobile/src/components/: SectionCard.tsx
mobile/src/data/: funFacts.ts  youtubeQueries.ts
presentacion/: presentacion_ecosort.aux  presentacion_ecosort.fdb_latexmk  presentacion_ecosort.fls  presentacion_ecosort.tex
pruebas_multimodales/: descripciones_para_probar.txt  resultados_modelo.csv  resultados_modelo.json
scripts/: find_backticks.py  prepare_data.ps1  resume_keras_10.ps1  resume_keras_to_100.ps1  resume_keras_to_120.ps1  run_demo.ps1  setup_backend.ps1  setup_ml.ps1  start_api.ps1  start_mobile.ps1  train_keras.ps1  train_lite.ps1  train_pro.ps1
(+7 files in other folders)
